--- a/includes/header.html
+++ b/includes/header.html
@@ -7,5 +7,6 @@
     <a href="/donor-info.html">Donor Info</a>
     <a href="/donor-testimonials.html">Donor Testimonials</a>
     <a href="/book.html">Book</a>
+    <a href="/hub/index.html">Kidney Hub</a>
   </nav>
 </header>
