--- a/includes/header.html
+++ b/includes/header.html
@@ -9,4 +9,5 @@
     <a href="/book.html">Book</a>
     <a href="/hub/index.html">Kidney Hub</a>
   </nav>
+  <div data-include="/includes/analytics.html"></div>
 </header>
