--- a/includes/transplant-subnav.html
+++ b/includes/transplant-subnav.html
@@ -1,11 +1,8 @@
 <nav class="sub-nav">
-  <a href="index.html">Overview</a> |
-  <a href="evaluation.html">Evaluation</a> |
-  <a href="matching.html">Matching</a> |
-  <a href="staff.html">Transplant Staff</a> |
-  <a href="surgery.html">Surgery</a> |
-  <a href="recovery.html">Recovery</a> |
-  <a href="complications.html">Complications</a> |
-  <a href="life-after.html">Life After Transplant</a>
+  <a href="/hub/transplant/index.html">Overview</a> |
+  <a href="/hub/transplant/preop/index.html">Pre-Op</a> |
+  <a href="/hub/transplant/surgery/index.html">Surgery</a> |
+  <a href="/hub/transplant/postop/index.html">Post-Op</a>
 </nav>
 <hr>
+
