--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,8 @@
 <div data-include="disclaimer.html"></div>
 
-
-
 <footer>
   <p>&copy; 2025 Tito. All rights reserved.</p>
 </footer>
+
+<script src="/scripts/include.js" defer></script>
+
