--- a/includes/donation-subnav.html
+++ b/includes/donation-subnav.html
@@ -1,9 +1,10 @@
-<nav class="sub-nav">
-  <a href="index.html">Overview</a> |
-  <a href="who-can-donate.html">Who Can Donate?</a> |
-  <a href="testing.html">Evaluation & Testing</a> |
-  <a href="risks.html">Risks</a> |
-  <a href="recovery.html">Recovery</a> |
-  <a href="life-after.html">Life After Donation</a>
+<nav class="sub-nav js-active-nav" aria-label="Donor navigation">
+  <a href="/hub/donor/index.html" data-prefix="/hub/donor/">Overview</a> |
+  <a href="/hub/donor/who-can-donate.html">Who Can Donate?</a> |
+  <a href="/hub/donor/testing.html">Evaluation &amp; Testing</a> |
+  <a href="/hub/donor/risks.html">Risks</a> |
+  <a href="/hub/donor/recovery.html">Recovery</a> |
+  <a href="/hub/donor/life-after.html">Life After Donation</a>
 </nav>
 <hr>
+
