--- a/includes/transplant-subnav.html
+++ b/includes/transplant-subnav.html
@@ -1,8 +1,8 @@
-<nav class="sub-nav">
-  <a href="/hub/transplant/index.html">Overview</a> |
-  <a href="/hub/transplant/preop/index.html">Pre-Op</a> |
-  <a href="/hub/transplant/surgery/index.html">Surgery</a> |
-  <a href="/hub/transplant/postop/index.html">Post-Op</a>
+<nav class="sub-nav js-active-nav" aria-label="Transplant navigation">
+  <a href="/hub/transplant/index.html" data-prefix="/hub/transplant/">Overview</a> |
+  <a href="/hub/transplant/preop/index.html" data-prefix="/hub/transplant/preop/">Pre-Op</a> |
+  <a href="/hub/transplant/surgery/index.html" data-prefix="/hub/transplant/surgery/">Surgery</a> |
+  <a href="/hub/transplant/postop/index.html" data-prefix="/hub/transplant/postop/">Post-Op</a>
 </nav>
 <hr>
 
