--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,3 +1,15 @@
+<div class="cta-strip">
+  <a class="button button--primary button--lg" href="/book/index.html">
+    <i data-feather="book-open" aria-hidden="true"></i> Buy the Book
+  </a>
+  <a class="button button--secondary button--lg" href="https://ko-fi.com/titoneedsakidney">
+    <i data-feather="heart" aria-hidden="true"></i> Support on Ko-fi
+  </a>
+  <a class="button button--ghost button--lg" href="/start-here.html">
+    <i data-feather="compass" aria-hidden="true"></i> Start Here
+  </a>
+</div>
+
 <div class="disclaimer">
   <strong>Disclaimer:</strong> The information on this site is based on personal
   experience and research. It is for general educational purposes only and is 
@@ -9,4 +21,6 @@
   <p>&copy; 2025 Tito. All rights reserved.</p>
 </footer>
 
+<script src="https://unpkg.com/feather-icons"></script>
+<script>window.feather && feather.replace({width:18,height:18});</script>
 
