--- a/includes/donation-subnav.html
+++ b/includes/donation-subnav.html
@@ -1,10 +1,10 @@
 <nav class="sub-nav js-active-nav" aria-label="Donor navigation">
-  <a href="/hub/donor/index.html" data-prefix="/hub/donor/">Overview</a> |
-  <a href="/hub/donor/who-can-donate.html">Who Can Donate?</a> |
-  <a href="/hub/donor/testing.html">Evaluation &amp; Testing</a> |
-  <a href="/hub/donor/risks.html">Risks</a> |
-  <a href="/hub/donor/recovery.html">Recovery</a> |
-  <a href="/hub/donor/life-after.html">Life After Donation</a>
+  <a href="/hub/donation/index.html" data-prefix="/hub/donor/">Overview</a> |
+  <a href="/hub/donation/who-can-donate.html">Who Can Donate?</a> |
+  <a href="/hub/donation/testing.html">Evaluation &amp; Testing</a> |
+  <a href="/hub/donation/risks.html">Risks</a> |
+  <a href="/hub/donation/recovery.html">Recovery</a> |
+  <a href="/hub/donation/life-after.html">Life After Donation</a>
 </nav>
 <hr>
 
