--- a/includes/transplant-subnav.html
+++ b/includes/transplant-subnav.html
@@ -1,8 +1,10 @@
-<nav class="sub-nav js-active-nav" aria-label="Transplant navigation">
-  <a href="/hub/transplant/index.html" data-prefix="/hub/transplant/">Overview</a> |
-  <a href="/hub/transplant/preop/index.html" data-prefix="/hub/transplant/preop/">Pre-Op</a> |
-  <a href="/hub/transplant/surgery/index.html" data-prefix="/hub/transplant/surgery/">Surgery</a> |
-  <a href="/hub/transplant/postop/index.html" data-prefix="/hub/transplant/postop/">Post-Op</a>
+<nav class="sub-nav js-active-nav" aria-label="Transplant sections">
+  <a href="/hub/transplant/" data-prefix="/hub/transplant/">Overview</a>
+  <span class="pipe">|</span>
+  <a href="/hub/transplant/preop/" data-prefix="/hub/transplant/preop/">Pre-Op</a>
+  <span class="pipe">|</span>
+  <a href="/hub/transplant/surgery/" data-prefix="/hub/transplant/surgery/">Surgery</a>
+  <span class="pipe">|</span>
+  <a href="/hub/transplant/postop/" data-prefix="/hub/transplant/postop/">Post-Op</a>
 </nav>
-<hr>
 
