maybe phase 0 is done

--- a/includes/transplant-surgery-staff-subnav.html
+++ b/includes/transplant-surgery-staff-subnav.html
@@ -4,4 +4,7 @@
   <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/anesthesia.html">Anesthesiologist</a>
   <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/or-nurse.html">OR Nurse</a>
   <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/pacu-nurse.html">PACU/Inpatient Nurse</a>
+  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/inpatient-nurse.html">Inpatient/Transplant Unit Nurse</a>
+  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/inpatient-tech.html">Inpatient Tech (PCT/CNA)</a>
+  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/physical-therapist.html">Physical Therapist</a>
 </nav>
