includes_es translations

--- a/includes/dialysis-staff-subnav.html
+++ b/includes/dialysis-staff-subnav.html
@@ -1,23 +1,1 @@
-<nav class="sub-nav js-active-nav" aria-label="Dialysis staff sub-navigation">
-  <a href="/hub/dialysis/staff/index.html" data-prefix="/hub/dialysis/staff/">All Staff</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/nurse.html">Dialysis Nurse (RN)</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/technician.html">Dialysis Tech / PCT</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/floor-supervisor.html">Floor Supervisor</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/nephrologist.html">Nephrologist</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/dietitian.html">Dietitian</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/social-worker.html">Social Worker</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/financial-coordinator.html">Financial Coordinator</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/receptionist.html">Patient Services Coordinator</a>
-  <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/clinic-administrator.html">Clinic Administrator</a>
-</nav>
-
-
+I'm going one by one <nav class="sub-nav js-active-nav" aria-label="Dialysis staff sub-navigation"> <a href="/hub/dialysis/staff/index.html" data-prefix="/hub/dialysis/staff/">All Staff</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/nurse.html">Dialysis Nurse (RN)</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/technician.html">Dialysis Tech / PCT</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/floor-supervisor.html">Floor Supervisor</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/nephrologist.html">Nephrologist</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/dietitian.html">Dietitian</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/social-worker.html">Social Worker</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/financial-coordinator.html">Financial Coordinator</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/receptionist.html">Patient Services Coordinator</a> <span class="pipe">|</span> <a href="/hub/dialysis/staff/clinic-administrator.html">Clinic Administrator</a> </nav>
