--- a/includes/header.html
+++ b/includes/header.html
@@ -1,7 +1,7 @@
 
 
 <header>
-
+<script src="/assets/js/lang-switch.js?v=20250905" defer></script>
   <h1>Tito Needs a Kidney</h1>
   <nav>
     <a href="/index.html">Home</a>
@@ -18,6 +18,6 @@
   <a href="#" data-lang="es">ES</a>
 </div>
 
-  <script src="/assets/js/lang-switch.js" defer></script>
+
 
 </header>
